package com.pattern;

public abstract class Beverage {
    protected String description = "Unknown Beverage";
    protected String size;

    public String getDescription() {
        return description;
    }

    public abstract double cost();
}
